# GearBot-2

./: Cargo.toml  README.md  sqlx-data.json
.github/workflows/: test.yml
.github/workflows/disabled/: coverage.yml
gearbot_2/: Cargo.toml
gearbot_2/src/: main.rs
gearbot_2/src/cache/: channel.rs  emoji.rs  guild.rs  member.rs  mod.rs  role.rs  user.rs  voice_state.rs
gearbot_2/src/communication/: mod.rs
gearbot_2/src/communication/general/: mod.rs  shutdown_at.rs
gearbot_2/src/communication/interaction/: debug.rs  mod.rs  userinfo.rs
gearbot_2/src/events/: channel.rs  emoji.rs  guild.rs  member.rs  message.rs  mod.rs  other.rs  role.rs  thread.rs  voice.rs
gearbot_2/src/util/: bot_context.rs  metrics.rs  mod.rs
gearbot_2/src/util/bot_context/: cluster_info.rs  guilds.rs  mod.rs  status.rs  user.rs
gearbot_2/src/util/error/: interaction_error.rs  mod.rs
gearbot_2/translations/: .gitignore
gearbot_2/translations/en_US/: errors.ftl
gearbot_2_api/: Cargo.toml  translations
gearbot_2_api/src/: main.rs
gearbot_2_api/src/interactions/: mod.rs
gearbot_2_api/src/interactions/command/: debug.rs  mod.rs  ping.rs  userinfo.rs
gearbot_2_api/src/middleware/: mod.rs  prometheus_metrics.rs
gearbot_2_api/src/util/: command_error.rs  metrics.rs  mod.rs
gearbot_2_api/translations/en_US/: api_commands.ftl
gearbot_2_api/translations/nl_BE/: api_commands.ftl
gearbot_2_lib/: Cargo.toml  sqlx_data.json
gearbot_2_lib/src/: lib.rs
gearbot_2_lib/src/datastore/: crypto.rs  error.rs  mod.rs
gearbot_2_lib/src/datastore/guild/: message.rs  mod.rs
gearbot_2_lib/src/datastore/guild/config/: guild_config.rs  mod.rs
gearbot_2_lib/src/datastore/guild/guild_config/: guild_config.rs  history.rs  mod.rs
gearbot_2_lib/src/kafka/: listener.rs  message.rs  mod.rs  sender.rs
gearbot_2_lib/src/translations/: lang_key.rs  mod.rs  translator.rs
gearbot_2_lib/src/util/: error.rs  markers.rs  mod.rs  url.rs
migrations/: 1_guild-config.sql  2_messages.sql
misc/: commands.json  docker-compose.yml
translations/: .gitignore
translations/en_US/: assembled.ftl  bot_commands.ftl  errors.ftl  general.ftl
