[package]
name = "gearbot_2_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluent-bundle = "0.15"
intl-memoizer = "0.5"
unic-langid = "0.9"
tracing = "0.1"
twilight-http = "0.8"
twilight-model = "0.8"
twilight-util = { version = "0.8", features = ["builder", "snowflake"] }
twilight-embed-builder = "0.8"
rdkafka = { version = "0.28", features = ["cmake-build"] }
bincode = { version = "2.0.0-alpha.2", features = ["serde"] }
tokio = "1.15"
uuid = { version = "0.8", features = ["v4"] }
time = "0.3"
aes-gcm = "0.9"
rand = "0.8"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "time", "json", "offline"] }
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"


# for local testing
#twilight-http = {path="../../twilight/http"}
#twilight-model = {path="../../twilight/model"}